--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -80,7 +80,7 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        {{!-- <a class="item active" data-tab="abilities">Abilities</a> --}}
+        <a class="item active" data-tab="violence">Violence</a>
         <a class="item" data-tab="inventory">Inventory</a>
         <a class="item" data-tab="class">Class</a>
         <a class="item" data-tab="description">Background</a>
@@ -89,85 +89,83 @@
     {{!-- Sheet Body --}}
     <section class="sheet-body">
 
-        {{!-- Abilities Tab --}}
-        {{!--
-        <div class="tab abilities" data-group="primary" data-tab="abilities">
-            <div class="ability-grid">
-                {{#each data.abilities as |ability key|}}
-                    <div class="ability-name">
-                        <span class="rollable" data-roll="d20+@abilities.{{key}}.score" data-label="{{key}}">{{ability.label}}</span>
-                    </div>
-                    <div class="ability-score">
-                        <input class="left-column-input ability-value" type="text" name="data.abilities.{{key}}.score" value="{{numberFormat ability.score decimals=0 sign=true}}" data-dtype="Number"/>
-                    </div>
-                {{/each}}
+        {{!-- Violence Tab --}}
+        <div class="tab violence" data-group="primary" data-tab="violence">
+            <div class="violence-block">
+                <div class="initiative">
+                    <button class="rollable" data-roll="d6" data-label="{{localize 'MB.PartyInitiative'}} (1-3 {{localize 'MB.EnemiesBegin'}}, 4-6 {{localize 'MB.PlayerCharactersBegin'}})" title="{{localize 'MB.PartyInitiative'}}">{{localize "MB.PartyInitiative"}}</button>
+                    <button class="rollable" data-roll="d6+@abilities.agility.score" data-label="{{localize 'MB.PlayerInitiative'}}" title="{{localize 'MB.PlayerInitiative'}}">{{localize "MB.PlayerInitiative"}}</button>
+                </div>                
+                <ol class="items-list inventory-list">
+                    <li class="items-header flexrow">
+                        <h3 class="item-name flexrow">{{localize "MB.ItemTypeWeaponPlural"}}</h3>
+                        <div class="item-controls flexrow">
+                            <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
+                                <i class="fas fa-plus"></i> {{localize "MB.Add"}}
+                            </a>
+                        </div>
+                    </li>            
+                    <ol class="item-list">
+                        {{#each actor.weapons as |item id|}}
+                        <li class="item flexrow" data-item-id="{{item._id}}">
+                            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                            <h4 class="item-name">{{item.name}}</h4>
+                            <div class="item-buttons">
+                                <button class="item-button rollable" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
+                                        title="{{item.data.attackLabel}}">{{item.data.attackLabel}}</button>
+                                <button class="item-button rollable" data-roll="{{item.data.damageDie}}" data-label="damage_{{item._id}}"
+                                        title="{{item.data.damageLabel}}">{{item.data.damageLabel}}</button>
+                            </div>
+                            <div class="item-group">                          
+                            </div>
+                            <div class="item-controls">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </div>
+                        </li>
+                        {{/each}}
+                    </ol> 
+                    <li class="items-header flexrow">
+                        <h3 class="item-name flexrow">{{localize "MB.ItemTypeArmorPlural"}}</h3>
+                        <div class="item-controls flexrow">
+                            <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
+                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
+                            </a>
+                        </div>
+                    </li>   
+                    <ol class="item-list">
+                        {{#each actor.armor as |item id|}}
+                        <li class="item flexrow" data-item-id="{{item._id}}">
+                            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                            <h4 class="item-name">{{item.name}}</h4>
+                            <div class="item-buttons">
+                                {{#ifEquals item.type "armor"}}
+                                    <button class="item-button rollable" data-roll="d20+@abilities.agility.score" data-label="defend_{{item._id}}"
+                                            title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
+                                    <button class="item-button rollable" data-roll="{{item.data.damageReductionDie}}" data-label="damageReduction_{{item._id}}"
+                                            title="{{localize 'MB.DamageReduction'}}">{{item.data.damageReductionDie}} {{localize "MB.DamageReduction"}}</button>                                    
+                                {{/ifEquals}}
+                            </div>
+                            <div class="item-controls">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </div>
+                        </li>
+                        {{/each}}
+                    </ol>                    
+                </ol>                        
             </div>
         </div>
-        --}}
 
         {{!-- Inventory Tab --}}
         <div class="tab items" data-group="primary" data-tab="inventory">
+
+            <div class="form-group">
+                <label>{{ localize "MB.Silver" }}</label>
+                <input type="text" name="silver" value="{{data.silver}}" placeholder="0" data-dtype="Number" />
+            </div> 
+
             <ol class="items-list inventory-list">
-                <li class="items-header flexrow">
-                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeWeaponPlural"}}</h3>
-                    <div class="item-controls flexrow">
-                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
-                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
-                        </a>
-                    </div>
-                </li>            
-                <ol class="item-list">
-
-                    {{#each actor.weapons as |item id|}}
-                    <li class="item flexrow" data-item-id="{{item._id}}">
-                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{item.name}}</h4>
-                        <div class="item-buttons">
-                            <button class="item-button rollable" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
-                                    title="{{item.data.attackLabel}}">{{item.data.attackLabel}}</button>
-                            <button class="item-button rollable" data-roll="{{item.data.damageDie}}" data-label="damage_{{item._id}}"
-                                    title="{{item.data.damageLabel}}">{{item.data.damageLabel}}</button>
-                        </div>
-                        <div class="item-group">                          
-                        </div>
-                        <div class="item-controls">
-                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                        </div>
-                    </li>
-                    {{/each}}
-
-                </ol>
-
-                <li class="items-header flexrow">
-                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeArmorPlural"}}</h3>
-                    <div class="item-controls flexrow">
-                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
-                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
-                        </a>
-                    </div>
-                </li>   
-                <ol class="item-list">
-                    {{#each actor.armor as |item id|}}
-                    <li class="item flexrow" data-item-id="{{item._id}}">
-                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{item.name}}</h4>
-                        <div class="item-buttons">
-                            {{#ifEquals item.type "armor"}}
-                                <button class="item-button rollable" data-roll="d20+@abilities.agility.score" data-label="defend_{{item._id}}"
-                                        title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
-                                <button class="item-button rollable" data-roll="{{item.data.damageReductionDie}}" data-label="damageReduction_{{item._id}}"
-                                        title="{{localize 'MB.DamageReduction'}}">{{item.data.damageReductionDie}} {{localize "MB.DamageReduction"}}</button>                                    
-                            {{/ifEquals}}
-                        </div>
-                        <div class="item-controls">
-                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                        </div>
-                    </li>
-                    {{/each}}
-                </ol>
-
                 <li class="items-header flexrow">
                     <h3 class="item-name flexrow">{{localize "MB.ItemTypeScrollPlural"}}</h3>
                     <div class="item-controls flexrow">
