--- a/templates/creature-sheet.html
+++ b/templates/creature-sheet.html
@@ -6,6 +6,56 @@
             <h1 class="charname">
                 <input name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}"/>
             </h1>
-        </section>
+            {{!-- Resources --}}
+            <ul class="resources flexrow">
+                {{!-- hit points --}}
+                <li class="resource">
+                    <h4 class="resource-name box-title">{{ localize "MB.HitPoints" }}</h4>
+                    <div class="resource-value multiple">
+                        <input name="data.hp.current" type="text" value="{{data.hp.current}}" placeholder="10" data-dtype="Number"/>
+                        <span class="sep"> / </span>
+                        <input name="data.hp.max" type="text" value="{{data.hp.max}}" placeholder="10" data-dtype="Number"/>
+                    </div>
+                    <footer class="resource-footer">
+                        <span>{{ localize "MB.Current"}} / {{ localize "MB.Max"}}</span>
+                    </footer>                    
+                </li>
+                {{!-- morale --}}
+                <li class="resource">
+                    <h4 class="resource-name box-title">{{ localize "MB.Morale" }}</h4>
+                    <div class="resource-value multiple">
+                        <input name="data.morale" type="text" value="{{data.morale}}" placeholder="10" data-dtype="Number"/>
+                    </div>
+                </li>                
+            </ul>
+        </section>        
     </header>
+
+    {{!-- Sheet Body --}}
+    <section class="sheet-body">
+        {{!-- Armor --}}
+        <div class="form-group">
+            <label>{{ localize "MB.Armor" }}</label>
+            <input type="text" name="data.armor.name" value="{{data.armor.name}}" placeholder="None" data-dtype="String" />
+            <label>{{ localize "MB.DamageReductionDie" }}</label>
+            <input type="text" name="data.armor.damageReductionDie" value="{{data.armor.dataReductionDie}}" placeholder="d4" data-dtype="String" />
+        </div> 
+
+        {{!-- Attacks --}}
+        <div class="attacks">
+            <label>{{ localize "MB.Attacks" }}</label>
+            <input type="text" name="data.attacks" value="{{data.attacks}}" placeholder="None" data-dtype="String" />
+        </div> 
+
+        <div class="special">
+            <label>{{ localize "MB.Special" }}</label>
+            <textarea class="description"></textarea>
+        </div>    
+
+        <div class="description">
+            <label>{{ localize "MB.Description" }}</label>
+            <textarea class="description"></textarea>
+            {{!-- {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}  --}}
+        </div>
+    </section>
 </form>
