--- a/templates/creature-sheet.html
+++ b/templates/creature-sheet.html
@@ -20,42 +20,52 @@
                         <span>{{ localize "MB.Current"}} / {{ localize "MB.Max"}}</span>
                     </footer>                    
                 </li>
-                {{!-- morale --}}
-                <li class="resource">
-                    <h4 class="resource-name box-title">{{ localize "MB.Morale" }}</h4>
-                    <div class="resource-value multiple">
-                        <input name="data.morale" type="text" value="{{data.morale}}" placeholder="10" data-dtype="Number"/>
-                    </div>
-                </li>                
             </ul>
         </section>        
     </header>
 
     {{!-- Sheet Body --}}
     <section class="sheet-body">
+        {{!-- Morale --}}
+        <div class="form-group">
+            <label>{{ localize "MB.Morale" }}</label>
+            <input name="data.morale" type="text" value="{{data.morale}}" placeholder="10" data-dtype="Number"/>
+        </div>
+
         {{!-- Armor --}}
         <div class="form-group">
             <label>{{ localize "MB.Armor" }}</label>
             <input type="text" name="data.armor.name" value="{{data.armor.name}}" placeholder="None" data-dtype="String" />
+        </div>
+        <div class="form-group">
             <label>{{ localize "MB.DamageReductionDie" }}</label>
             <input type="text" name="data.armor.damageReductionDie" value="{{data.armor.dataReductionDie}}" placeholder="d4" data-dtype="String" />
         </div> 
 
-        {{!-- Attacks --}}
-        <div class="attacks">
-            <label>{{ localize "MB.Attacks" }}</label>
-            <input type="text" name="data.attacks" value="{{data.attacks}}" placeholder="None" data-dtype="String" />
+        {{!-- Attack --}}
+        <div class="form-group">
+            <label>{{ localize "MB.Attack" }}</label>
+            <input type="text" name="data.attack.name" value="{{data.attack.name}}" placeholder="None" data-dtype="String" />
         </div> 
-
-        <div class="special">
+        <div class="form-group">
+            <label>{{ localize "MB.DamageDie" }}</label>
+            <input type="text" name="data.attack.damageDie" value="{{data.attack.damageDie}}" placeholder="d4" data-dtype="String" />
+        </div>
+        <div class="form-group">
             <label>{{ localize "MB.Special" }}</label>
-            <textarea class="description"></textarea>
-        </div>    
+            <input type="text" name="data.special" value="{{data.special}}" placeholder="None" data-dtype="String" />
+        </div>
 
+        {{!-- Bounty --}}
+        <div class="form-group">
+            <label>{{ localize "MB.Bounty" }}</label>
+            <input type="text" name="data.bounty" value="{{data.bounty}}" placeholder="None" data-dtype="String" />
+        </div>
+
+        {{!-- Description --}}
         <div class="description">
             <label>{{ localize "MB.Description" }}</label>
-            <textarea class="description"></textarea>
-            {{!-- {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}  --}}
+            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
         </div>
     </section>
 </form>
